--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   disk_space: ^0.2.1
   firebase_storage: ^10.2.16
   file_picker: ^4.5.1
+  firebase_messaging: ^11.4.0
+  flutter_app_badger: ^1.4.0
+  firebase_auth: ^3.3.18
+  google_sign_in: ^5.3.2
+  flutter_signin_button: ^2.0.0
  
 
 dev_dependencies:
